<resources>
    <string name="app_name">LiveScore</string>
    <string name="scores">Scores</string>
    <string name="favourites">Favourites</string>
    <string name="news">News</string>
    <string name="watch">Watch</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent">Recent</string>
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
    <string name="ft">FT</string>
    <string name="title_activity_football_details">FootballDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_no_internet">NoInternetActivity</string>
    <string name="RUBISH">sugdhfshfushf;DHFKdhfkdfkdfbkkkhfHFFKJFKKJAKSNAKSDASDKHSDKANSKDJBNSKJKJXNCBJXBCKJCN,ZNCKXCNNCXBKCBKCBKCXKHFFHHFOIHFOAHOAISHDOISHDOAHSDOAHSDOIH</string>
</resources>