<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FootballScoreFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/day_pick_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5sp">

            <TextView
                android:id="@+id/football_recent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recent"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/football_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/today"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/football_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/upcoming"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/day_pick_layout"
            android:layout_marginTop="10sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/football_recent_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical" />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>